test/bad/def_recursive.pa
def foo for a b {
    foo(a,b) <-> foo(b,a)
}
